# logana

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  TODO.md  config.example.json  dist-workspace.toml  issues.md
.github/workflows/: docs.yml  release.yml  rust.yml
benches/: file_reader.rs  headless.rs  render_pipeline.rs  visible_lines.rs
docs/: book.toml
docs/src/: SUMMARY.md  annotations.md  commands.md  data-locations.md  dlt.md  docker.md  installation.md  introduction.md  log-formats.md  multi-tab.md  navigation.md  quick-start.md  search.md  structured-fields.md  visual-char-mode.md  visual-line-mode.md
docs/src/configuration/: index.md  keybindings.md  themes.md
docs/src/filtering/: date-filters.md  field-filters.md  index.md  text-filters.md
examples/: config.example.json
pkg/aur/: .SRCINFO  PKGBUILD
pkg/homebrew/: logana.rb
pkg/nix/: default.nix
src/: analyzer.rs  auto_complete.rs  command_args.rs  commands.rs  config.rs  date_filter.rs  db.rs  export.rs  field_filter.rs  file_reader.rs  filters.rs  format.rs  headless.rs  lib.rs  log_line.rs  log_manager.rs  main.rs  search.rs  syslog.rs  tests.rs  theme.rs  types.rs  ui.rs  value_colors.rs
src/mode/: annotation_mode.rs  app_mode.rs  command_mode.rs  comment_mode.rs  dlt_select_mode.rs  docker_select_mode.rs  filter_mode.rs  keybindings_help_mode.rs  mod.rs  normal_mode.rs  search_mode.rs  select_fields_mode.rs  ui_mode.rs  value_colors_mode.rs  visual_char_mode.rs  visual_mode.rs
src/parser/: clf.rs  common_log.rs  dlt.rs  dlt_binary.rs  dmesg.rs  journalctl.rs  json.rs  kube_cri.rs  logfmt.rs  mod.rs  otlp.rs  syslog.rs  timestamp.rs  types.rs  web_error.rs
src/tests/: color_config.rs  filter_persistence.rs  line_wrapping.rs  stdin.rs  vim_motions.rs
src/ui/: app.rs  commands.rs  field_layout.rs  loading.rs  mod.rs  render.rs  render_popups.rs
templates/: jira.txt  markdown.txt
tests/: integration.rs
themes/: atomic.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json  dracula.json  everforest-dark.json  everforest-light.json  github-dark-dimmed.json  github-dark.json  github-light.json  gruvbox-dark.json  jandedobbeleer.json  kanagawa.json  monokai.json  nord.json  onedark.json  onelight.json  paradox.json  rose-pine-dawn.json  rose-pine.json  solarized.json  tokyonight.json
wix/: main.wxs
