[package]
name = "logsmith-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
tempfile = "3.10"
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6.0.0"


