[package]
name = "logsmith-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
tempfile = "3.10"
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "time", "process"] }
async-trait = "0.1"
dirs = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter", "json"]}
tracing-appender = "0.2.4"
memmap2 = "0.9"
memchr = "2"
aho-corasick = "1"
rayon = "1"

[profile.release]
debug = true
