[package]
name = "logana"
version = "0.1.0"
edition = "2024"
authors = ["Paulo Remoli"]
description = "A TUI log analyzer/viewer built for speed - handles files with millions of lines with instant filtering and VIM like navigation."
license = "GPL-3.0"
repository = "https://github.com/pauloremoli/logana"
homepage = "https://github.com/pauloremoli/logana"
keywords = ["log", "tui", "viewer", "terminal", "analyzer"]
categories = ["command-line-utilities", "development-tools::debugging"]
exclude = [".github", "pkg"]

[package.metadata.wix]
upgrade-guid = "40A718EC-7645-458F-A8AB-6DE8BC5A8183"
path-guid = "0D696C66-ABEF-4551-A553-0530BA66BEC7"
license = false
eula = false

[dependencies]
anyhow            = { version = "1.0",    default-features = false, features = ["std"] }
clap              = { version = "4.5",    default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions"] }
regex             = { version = "1.10",   default-features = false, features = ["std", "perf", "unicode-case", "unicode-perl"] }
ratatui           = { version = "0.30",   default-features = false, features = ["crossterm"] }
crossterm         = "0.29"
unicode-width     = { version = "0.2",    default-features = false, features = ["cjk"] }
serde             = { version = "1.0",    default-features = false, features = ["std", "derive"] }
serde_json        = { version = "1.0",    default-features = false, features = ["std"] }
serde_with        = { version = "3.8",    default-features = false, features = ["std", "macros"] }
sqlx              = { version = "0.8",    default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio             = { version = "1",      default-features = false, features = ["rt-multi-thread", "macros", "io-std", "time", "process"] }
async-trait       = "0.1"
dirs              = "6.0.0"
tracing           = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "json"] }
tracing-appender  = "0.2.4"
memmap2           = "0.9"
memchr            = { version = "2",      default-features = false, features = ["std"] }
aho-corasick      = { version = "1",      default-features = false, features = ["std", "perf-literal"] }
rayon             = "1"
time              = { version = "0.3",    default-features = false, features = ["std"] }
arboard           = "3"

[dev-dependencies]
tempfile  = "3.10"
criterion = { version = "0.5", default-features = false, features = ["rayon", "html_reports"] }

[[bench]]
name    = "file_reader"
harness = false

[[bench]]
name    = "visible_lines"
harness = false

[[bench]]
name    = "render_pipeline"
harness = false

[[bench]]
name    = "headless"
harness = false

[profile.release]
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
